syntax = "proto3";

package douyin;

message Response {
  int32 code = 1;  //对应值 2006
  int32 status_code = 2;
  int32 error_code = 3;
  string message = 4;
  int32 log_id = 5;
  ConversationList conversationList = 6;
  string request_id = 7;
  int64 server_time = 10;
  int64 client_time = 11;
  int64 user_id = 13;
}

message ConversationList {
  repeated ConversationInfoV2 messagesList = 1;
  bool hasMore = 2;
  int64 next_Cursor = 3;
}

message ConversationInfoV2 {
  string conversation_id = 1;
  int64 conversation_short_id = 2;
  int32 conversation_type = 3;
  string ticket = 4;
  ParticipantsPage firstpageparticipant = 6;
  int32 participantsCount = 7;
  bool is_participant = 8;
  int32 inbox_type = 9;
  int32 badge_count = 10;
  repeated MuteBadgeCountInfo muteBadgeInfo = 11;
  Participant user_info = 20;
  ConversationCoreInfo conversationCoreInfo = 50;
  ConversationSettingInfo conversationSettingInfo = 51;
  repeated RobotInfo robotInfos = 60;
}

message ParticipantsPage {
  repeated Participant participants = 1;
  bool hasMore = 2;
  int64 cursor = 3;
}

message MuteBadgeCountInfo {
  int32 message_type = 1;
  int32 badge_count = 2;
}

message Participant {
  int64 user_id = 1;
  int64 sort_order = 2;
  int32 role = 3;
  string alias = 4;
  string sec_uid = 5;
  int32 blocked = 6;
  int64 left_block_time = 7;
  map<string, string> ext = 8;
}

message ConversationCoreInfo {
  string conversation_id = 1;
  int64 conversation_short_id = 2;
  int32 conversation_type = 3;
  int64 info_version = 4;
  string name = 5;
  string desc = 6;
  string icon = 7;
  int32 inbox_type = 8;
  string notice = 9;
  map<string, string> ext = 11;
  int64 owner = 12;
  string sec_owner = 13;
}

message ConversationSettingInfo {
  string conversation_id = 1;
  int64 conversation_short_id = 2;
  int32 conversation_type = 3;
  int64 min_index = 4;
  int64 read_index = 5;
  int32 mute = 6;
  int32 stick_on_top = 7;
  int32 inbox_type = 8;
  map<string, string> ext = 9;
  int64 setting_version = 10;
  int32 favorite = 11;
  int64 set_top_time = 12;
  int64 set_favorite_time = 13;
  int64 read_index_v2 = 14;
  int64 min_index_v2 = 15;
  int32 read_badge_count = 16;
  repeated MuteReadBadgeCountInfo mute_read_badge_count_infos = 17;
  int32 push_status = 30;
}

message MuteReadBadgeCountInfo{
  int32 message_type = 1;
  int32 read_badge_count = 2;
}

message RobotInfo {
  int64 user_id = 1;
  string sec_uid = 2;
  map<string, string> ext = 99;
}