syntax = "proto3";

package douyin;

message Response {
  int32 code = 1;
  int32 status_code = 2;
  int32 unknown3 = 3;
  string message = 4;
  int32 unknown5 = 5;
  Container container = 6;
  string unknown10 = 7;
  int64 timestamp1 = 10;
  int64 timestamp2 = 11;
  int64 user_id = 13;
}

message Container {
  repeated Message messages = 1;
  int32 unknown2 = 2;
  int32 unknown3 = 3;
  UserInfo user_info = 20;
  GroupInfo group_info = 50;
  GroupSettings group_settings = 51;
}

message Message {
  int64 user_id = 1;
  int32 type = 2;
  int32 status = 3;
  string content = 4;
  string sec_uid = 5;
  int32 unknown6 = 6;
  int32 unknown7 = 7;
}

message UserInfo {
  int64 user_id = 1;
  int32 type = 3;
  string content = 4;
  string sec_uid = 5;
  int32 unknown6 = 6;
  int32 unknown7 = 7;
}

message GroupInfo {
  string group_id = 1;
  int64 group_id_long = 2;
  int32 type = 3;
  int32 create_time = 4;
  string name = 5;
  string description = 6;
  string avatar_url = 7;
  int32 unknown8 = 8;
  string unknown9 = 9;
  repeated KeyValuePair attributes = 11;
  int64 owner_id = 12;
  string owner_sec_uid = 13;
  int32 unknown14 = 14;
  int32 unknown15 = 15;
  int32 unknown16 = 16;
  int64 owner_id2 = 17;
  int64 create_timestamp = 18;
  int32 unknown40 = 40;
  int32 unknown41 = 41;
  repeated TimestampPair timestamp_pairs = 42;
  int32 unknown43 = 43;
}

message GroupSettings {
  string group_id = 1;
  int64 group_id_long = 2;
  int32 type = 3;
  int32 unknown4 = 4;
  int64 timestamp = 5;
  int32 unknown6 = 6;
  int32 unknown7 = 7;
  int32 unknown8 = 8;
  repeated KeyValuePair settings = 9;
  int32 timestamp2 = 10;
  int32 unknown11 = 11;
  int32 unknown12 = 12;
  int32 unknown13 = 13;
  int32 unknown14 = 14;
  int32 unknown15 = 15;
  int32 unknown16 = 16;
  repeated TimestampPair timestamp_pairs = 32;
  int32 unknown33 = 33;
}

message KeyValuePair {
  string key = 1;
  string value = 2;
}

message TimestampPair {
  string key = 1;
  int64 timestamp = 2;
}